# mgc-v05l-automation

./: .env.example  .gitignore  README.md  pyproject.toml
config/: atp_companion_baseline_v1_asia_us.yaml  atp_companion_candidate_promotion_1_075r_favorable_only.yaml  atp_promotion_add_candidate_registry.yaml  base.yaml  data_storage_policy.json  live.yaml  market_data_providers.json  paper.yaml  probationary_pattern_engine.yaml  probationary_pattern_engine_live_atp_companion_v1_asia_us_pilot.yaml  probationary_pattern_engine_live_atp_companion_v1_gc_asia_us_pilot.yaml  probationary_pattern_engine_paper.yaml  probationary_pattern_engine_paper_atp_companion_shared_runtime.yaml  probationary_pattern_engine_paper_atp_companion_v1_asia_us.yaml  probationary_pattern_engine_paper_atp_companion_v1_asia_us_5m.yaml  probationary_pattern_engine_paper_atp_companion_v1_gc_asia_promotion_1_075r_favorable_only.yaml  probationary_pattern_engine_paper_atp_companion_v1_gc_asia_promotion_1_075r_favorable_only_5m.yaml  probationary_pattern_engine_paper_atp_companion_v1_gc_asia_us 2.yaml  probationary_pattern_engine_paper_atp_companion_v1_gc_asia_us.yaml  probationary_pattern_engine_paper_atp_companion_v1_gc_asia_us_5m.yaml  probationary_pattern_engine_paper_atp_companion_v1_gc_asia_us_loosened_backfill_20260416.yaml  probationary_pattern_engine_paper_atp_companion_v1_gc_asia_us_production_track.yaml  probationary_pattern_engine_paper_atp_companion_v1_gc_asia_us_production_track_5m.yaml  probationary_pattern_engine_paper_atp_companion_v1_gc_asia_us_production_track_selective_v1.yaml  replay.ablation_asia_only_no_vwap.yaml  (+91 more)
(+748 files in other folders)
