[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mgc-v05l-automation"
version = "0.1.0"
description = "MGC v0.5l external automation engine scaffold."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.12.0,<3.0.0",
  "SQLAlchemy>=2.0.0,<3.0.0",
]

[project.scripts]
mgc-v05l = "mgc_v05l.app.main:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0,<9.0.0",
]
research = [
  "duckdb>=1.1.0,<2.0.0",
  "pyarrow>=15.0.0,<20.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["mgc_automation", "mgc_automation.*", "mgc_v05l", "mgc_v05l.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
